@@ -1,21 +1,3 @@
-/**
- *   This file is part of Skript.
- *
- *  Skript is free software: you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- *  Skript is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with Skript.  If not, see <http://www.gnu.org/licenses/>.
- *
- * Copyright Peter Güttinger, SkriptLang team and contributors
- */
 package ch.njol.skript.events;
 
 import ch.njol.skript.Skript;
@@ -25,8 +7,8 @@ import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.skript.util.Color;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import ch.njol.skript.util.ColorRGB;
 import org.bukkit.FireworkEffect;
 import org.bukkit.event.Event;
 import org.bukkit.event.entity.FireworkExplodeEvent;
@@ -41,15 +23,15 @@ public class EvtFirework extends SkriptEvent {
 			//Making the event argument type fireworkeffects, led to Skript having troubles parsing for some reason.
 			Skript.registerEvent("Firework Explode", EvtFirework.class, FireworkExplodeEvent.class, "[a] firework explo(d(e|ing)|sion) [colo[u]red %-colors%]")
 					.description("Called when a firework explodes.")
-					.examples("on firework explode",
-							"on firework exploding colored red, light green and black",
-							"on firework explosion colored light green:",
-							"	broadcast \"A firework colored %colors% was exploded at %location%!\"")//TODO fix 
+					.examples("on firework explode:",
+								"\tif event-colors contains red:",
+							"on firework exploding colored red, light green and black:",
+							"on firework explosion colored rgb 0, 255, 0:",
+								"\tbroadcast \"A firework colored %colors% was exploded at %location%!\"")
 					.since("2.4");
 	}
-	
-	@Nullable
-	private Literal<Color> colors;
+
+	private @Nullable Literal<Color> colors;
 	
 	@SuppressWarnings("unchecked")
 	@Override
@@ -58,16 +40,23 @@ public class EvtFirework extends SkriptEvent {
 			colors = (Literal<Color>) args[0];
 		return true;
 	}
-	
-	@SuppressWarnings("null")
+
 	@Override
-	public boolean check(Event e) {
+	public boolean check(Event event) {
+		if (!(event instanceof FireworkExplodeEvent fireworkExplodeEvent))
+			return false;
+
 		if (colors == null)
 			return true;
-		List<org.bukkit.Color> colours = Arrays.stream(colors.getArray(e))
-				.map(color -> color.asBukkitColor())
-				.collect(Collectors.toList());
-		FireworkMeta meta = ((FireworkExplodeEvent)e).getEntity().getFireworkMeta();
+
+		List<org.bukkit.Color> colours = colors.stream(event)
+			.map(color -> {
+				if (color instanceof ColorRGB)
+					return color.asBukkitColor();
+				return color.asDyeColor().getFireworkColor();
+			})
+			.toList();
+		FireworkMeta meta = fireworkExplodeEvent.getEntity().getFireworkMeta();
 		for (FireworkEffect effect : meta.getEffects()) {
 			if (colours.containsAll(effect.getColors()))
 				return true;
